--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -419,7 +419,7 @@
                                     <div class="wui-i-qrcode"><img height="205px" width="205px" src="' + W.qrcodeUrl + '"></div>\
                                     <div class="wui-i-bottomText">长按二维码可关注我们</div>\
                                     <div></div>');
-                            $node.height(document.body.scrollHeight);
+{#                            $node.height(document.body.scrollHeight);#}
                             $('body').append($node);
                         }
                     }
