--- a/weapp/apps/customerized_apps/exsign/templates/webapp/m_exsign.html
+++ b/weapp/apps/customerized_apps/exsign/templates/webapp/m_exsign.html
@@ -367,9 +367,11 @@
               if(day_integral > 0){
                   str_int +=  day_integral+"积分奖励";
               }
-              if(day_coupon){
-                  str_coupon = " “"+day_coupon+"”一张";
-              }
+			  if (!$.isEmptyObject(day_coupon)) {
+					for (var i in day_coupon){
+						rule_html += "<div>“"+day_coupon[i].coupon_name+"”一张</div>";
+					}
+			  }
               if(day_integral <= 0 && !day_coupon){
                   rule_html += "<li>1.每日签到，没有奖励</li>";
               }else{
@@ -383,9 +385,11 @@
               if(day_integral > 0){
                   str_int +=  day_integral + "积分奖励";
               }
-              if(day_coupon){
-                  str_coupon = " “"+day_coupon+"”一张";
-              }
+			  if (!$.isEmptyObject(day_coupon)) {
+					for (var i in day_coupon){
+						rule_html += "<div>“"+day_coupon[i].coupon_name+"”一张</div>";
+					}
+			  }
 
               rule_html += "<li>"+str_int+str_coupon+"。</li>";
           }
