--- a/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
@@ -149,6 +149,7 @@
 			padding-bottom: 20px;
         }
 		.wui-ExSignRules{
+			text-align: left;
 			background: #FFF5EB;
 			border-top-left-radius: 15px;
 			border-top-right-radius: 15px;
@@ -158,6 +159,8 @@
 			background: -o-linear-gradient(#FBF9F7, rgba(253, 240, 225, 0.3)); /* Opera 11.1 - 12.0 */
 			background: -moz-linear-gradient(#FBF9F7, rgba(253, 240, 225, 0.3)); /* Firefox 3.6 - 15 */
 			background: linear-gradient(#FBF9F7, rgba(253, 240, 225, 0.3)); /* 标准的语法 */
+			color: #F35C3E;
+			padding: 20px 15px;
 		}
 
         .wui-SignCircle.wa-sign-board{
@@ -277,11 +280,11 @@
 		<div class="wui-Member">
 			<div class="wui-MemberGrade">
 				<div>当前等级</div>
-				<div class="wui-MemberGrade-grade wa-member-grade">铜牌会员</div>
+				<div class="wui-MemberGrade-grade wa-member-grade"></div>
 			</div>
 			<div class="wui-MemberPoint">
 				<div>我的积分</div>
-				<div class="wui-MemberPoint-point wa-user-integral">520</div>
+				<div class="wui-MemberPoint-point wa-user-integral"></div>
 			</div>
 			<div class="wui-clearf"></div>
 		</div>
@@ -314,25 +317,14 @@
 			</div>
 		</div>
 		<div class="wa-prize-board">
-			<span class="wa-daily_title">今日可以领取</span><span class="daily_points wa-daily_points Num">{%if component.model.daily_points %}{{component.model.daily_points}}{%else%}0{%endif%}积分，</span><span class="daily_prizes wa-daily_prizes" {%if not component.model.daily_prizes %}style="display: none"{%endif%}><b class="wui-coupon-count" >{{component.model.daily_prizes.length }}张</b>优惠券</span>
+			<span class="wa-daily_title">今日可以领取</span><span class="daily_points wa-daily_points Num">{%if component.model.daily_points %}{{component.model.daily_points}}{%else%}0{%endif%}积分，</span><span class="daily_prizes wa-daily_prizes" {%if not component.model.daily_prizes %}style="display: none"{%endif%}><b class="wui-coupon-count" >{{component.model.daily_prizes | length}}张</b>优惠券</span>
 		</div>
 	</div>
     <div class="wui-SignDescriptionDiv">
 		<div class="wui-SignDescriptionDivRules">
 			<img src="/termite_static/img/component/exsign/exsigndescription_rules_top.png" />
 		</div>
-        <div class="wui-SignDescriptionDiv Chr wui-ExSignRules">
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-			<div>sdfsdf</div>
-        </div>
+        <div class="Chr wui-ExSignRules wa-exsign-rules"></div>
     </div>
 </div>
 {% endifequal %}
