专项抽奖样式优化

--- a/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
@@ -311,8 +311,8 @@
           var name = descriptionModel.get('title');
           var startTime = descriptionModel.get('start_time');
           var endTime = descriptionModel.get('end_time');
-          var expend = descriptionModel.get('expend');
-          var delivery = descriptionModel.get('delivery');
+{#          var expend = descriptionModel.get('expend');#}
+{#          var delivery = descriptionModel.get('delivery');#}
           var chance = descriptionModel.get('chance');
           var allow_repeat = descriptionModel.get('allow_repeat');
             var share_description = descriptionModel.get('share_description');
@@ -344,8 +344,8 @@
             "name": name,
             "start_time": startTime,
             "end_time": endTime,
-            "expend": expend,
-            "delivery": delivery,
+{#            "expend": expend,#}
+{#            "delivery": delivery,#}
             "chance": chance,
             "allow_repeat": allow_repeat,
               "prize":JSON.stringify(prizeData),
