--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -11,9 +11,9 @@
         <div class="wui-i-roulette wui-i-header xa-header {% if component.model.limitation == 'no_limit' %}wui-lotterydescription-hide{% endif %}">
             <p class="wui-hide">您还有<b>0</b>次抽奖机会！</p>
         </div>
-        <div class="wui-i-roulette wui-i-header xa-remainedIntegral">
-            需要消耗<strong>{{ component.model.expend }}</strong>积分, <p style="display: inline-block">剩余<b></b>积分</p>
-        </div>
+{#        <div class="wui-i-roulette wui-i-header xa-remainedIntegral">#}
+{#            需要消耗<strong>{{ component.model.expend }}</strong>积分, <p style="display: inline-block">剩余<b></b>积分</p>#}
+{#        </div>#}
         <div class="wui-i-roulette wui-i-body">
             <div class="xui-circle xa-circle xa-circle-unit-0"></div>
             <div class="xui-circle xa-circle xa-circle-unit-1"></div>
