--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -345,12 +345,12 @@
 
 .wui-lotterydescription{
 	background: url("/termite_static/img/component/lottery/roulette_background.png") no-repeat scroll 42% 100% / 110% 100%;
-	height: 440px;
+	height: 451px;
 	padding-top: 0;
 	margin-top: -40px;
 }
 .wui-lotterydescription>.wui-i-title{
-	background: url("/termite_static/img/component/lottery/roulette_title.png") no-repeat scroll center center / 275px 140px rgba(0, 0, 0, 0);
+/*	background: url("/termite_static/img/component/lottery/roulette_title.png") no-repeat scroll center center / 275px 140px rgba(0, 0, 0, 0);*/
     height: 140px;
     padding-top: 0;
 }
