--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -148,22 +148,14 @@
 						订单编号：
 						<a title="查看" class="xt-orderLink" href="/mall2/order/?order_id=${order.id}" target="_blank">${order.order_id}{{if order.edit_money}}-${order.edit_money}{{/if}}</a>
 						</p>
-						<p class="ml15 fl w20">
-						{{if order.is_group_buying }}
-							{{if data.mall_type }}
+						{{if order.is_group_buying}}
+						<p class="fl w20">
+							{{if data.mall_type || order.supplier_user_id == 0 }}
 								<img src="/static_v2/img/editor/orderGroupIcon.png"/>
-							{{else}}
-								{{if order.supplier_user_id == 0 }}
-									<img src="/static_v2/img/editor/orderGroupIcon.png"/>
-								{{else}}
-									&nbsp;
-								{{/if}}
 							{{/if}}
-						{{else}}
-							&nbsp;
-						{{/if}}
 						</p>
-						<p class="ml10 fl w60">
+						{{/if}}
+						<p class="{{if !order.is_group_buying }}ml5{{/if}} fl w60">
 							${order.pay_interface_name}
 						</p>
 						<p class="ml10 fl">
@@ -176,7 +168,7 @@
 						</p>
 						{{/if}}
 					<div class="fr">
-					{{if order.groups.length > 1}}<p class="fl ml15">{{else}}<p class="fr mr15">{{/if}}
+					{{if order.groups.length > 1}}<p class="fl">{{else}}<p class="fr mr15">{{/if}}
 						<a title="查看" href="/mall2/order/?order_id=${order.id}" target="_blank" class="mr5">查看详情</a>
 						-
 						<a href='javascript:void(0);' class="xa-order-remark ml10" data-order-id="${order.id}" data-order-value="${order.remark}">备注</a>
