--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -48,9 +48,9 @@
 	width: 100%;
 	z-index: 9999;
 	background-color: rgba(0, 0, 0, 0.5);
-	top: 0px;
-	left: 0px;
-	height: 100%;
+	top: 0;
+	left: 0;
+	height: 111%;
 }
 .wui-appParticipantResult-Cover .wui-i-background {
 	background-color: #FFF;
