--- a/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
@@ -149,6 +149,7 @@
 			padding-bottom: 20px;
         }
 		.wui-ExSignRules{
+			list-style-type: decimal;
 			text-align: left;
 			background: #FFF5EB;
 			border-top-left-radius: 15px;
@@ -160,7 +161,18 @@
 			background: -moz-linear-gradient(#FBF9F7, rgba(253, 240, 225, 0.3)); /* Firefox 3.6 - 15 */
 			background: linear-gradient(#FBF9F7, rgba(253, 240, 225, 0.3)); /* 标准的语法 */
 			color: #F35C3E;
-			padding: 20px 15px;
+			padding: 20px 10px 30px 30px;
+
+		}
+		.wui-ExSignRules >li{
+			list-style-type: decimal;
+			padding-bottom: 10px;
+		}
+		.wui-ExSignRules >li ul li{
+			padding-bottom: 5px;
+		}
+		.wui-ExSignRules .wui-rules-serial-prizes,.wui-ExSignRules .wui-rules-daily-prizes div{
+			padding-bottom: 5px;
 		}
 
         .wui-SignCircle.wa-sign-board{
@@ -271,6 +283,11 @@
 		.wui-coupon-count{
 			color: #FDEB00;
 		}
+		.wui-rules-member-center{
+			font-size: 1.2rem;
+			color: #207CBE;
+			text-decoration: underline;
+		}
 
     </style>
     <link href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -320,11 +337,46 @@
 			<span class="wa-daily_title">今日可以领取</span><span class="daily_points wa-daily_points Num">{%if component.model.daily_points %}{{component.model.daily_points}}{%else%}0{%endif%}积分，</span><span class="daily_prizes wa-daily_prizes" {%if not component.model.daily_prizes %}style="display: none"{%endif%}><b class="wui-coupon-count" >{{component.model.daily_prizes | length}}张</b>优惠券</span>
 		</div>
 	</div>
-    <div class="wui-SignDescriptionDiv">
+    <li class="wui-SignDescriptionDiv">
 		<div class="wui-SignDescriptionDivRules">
 			<img src="/termite_static/img/component/exsign/exsigndescription_rules_top.png" />
 		</div>
-        <div class="Chr wui-ExSignRules wa-exsign-rules"></div>
+        <ul class="Chr wui-ExSignRules wa-exsign-rules">
+			<li class="wui-description" {% if not component.model.description %}style="display: none"{% endif %}>{{component.model.description}}</li>
+			<li class="wui-rules"><div>签到次数和对应奖品关系如下：</div>
+				<div class="wui-rules-daily">
+					<div class="fl">每日签到：</div>
+					<div class="fl">
+						<ul>
+							<li class="wui-rules-daily-point" {% if not component.model.daily_points %}style="display: none"{% endif %}>获得{%if component.model.daily_points %}{{component.model.daily_points}}{%else%}0{%endif%}积分</li>
+							<li class="wui-rules-daily-prizes" {% if not component.model.daily_prizes %}style="display: none"{% endif %}>
+								{% for daily_prize in  component.model.daily_prizes %}
+								<div>获得{{daily_prize.name}}</div>
+							{% endfor %}
+							</li>
+						</ul>
+					</div>
+					<div class="wui-clearf"></div>
+				</div>
+				{% for component in  component.components %}
+					<div class="wui-rules-serial wui-rules-serial{{ component.cid }}">
+					<div class="wui-rules-days fl">连续签到{{ component.model.serial_count }}天：</div>
+					<div class="wui-rules-rule fl">
+						<ul>
+							<li class="wui-rules-serial-point" {% if not component.model.serial_count_points %}style="display: none"{% endif %}>获得{%if component.model.serial_count_points %}{{component.model.serial_count_points}}{%else%}0{%endif%}积分</li>
+							<li class="wui-rules-serial-prizes">
+								{% for serial_count_prize in  component.model.serial_count_prizes %}
+									<div>获得{{serial_count_prize.name}}</div>
+								{% endfor %}
+							</li>
+						</ul>
+					</div>
+					<div class="wui-clearf"></div>
+				</div>
+				{% endfor %}
+			</li>
+			<li>签到奖励可以到<b class="wui-rules-member-center">个人中心</b>查看</li>
+		</ul>
     </div>
 </div>
 {% endifequal %}
