修改专项抽奖为幸运码抽奖

--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlotteries.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlotteries.html
@@ -6,7 +6,7 @@
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/exlottery/exlotteries/">百宝箱</a></li>
-			<li class="active">专项抽奖</li>
+			<li class="active">幸运码抽奖</li>
 		</ul>
 	</div>
 
@@ -70,7 +70,7 @@
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
 			<a href="/apps/exlottery/exlottery/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建专项抽奖
+				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建幸运码抽奖
 			</a>
 		</div>
 
