--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_code_store.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_code_store.html
@@ -12,7 +12,7 @@
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/exlottery/exlotteries/">百宝箱</a></li>
-			<li><a href="/apps/exlottery/exlotteries/">专项抽奖</a></li>
+			<li><a href="/apps/exlottery/exlotteries/">幸运码抽奖</a></li>
 			<li class="active">码库</li>
 		</ul>
 	</div>
