--- a/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_participances.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/exlottery_participances.html
@@ -16,7 +16,7 @@
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/exlottery/exlotteries/">百宝箱</a></li>
-			<li><a href="/apps/exlottery/exlotteries/">专项抽奖</a></li>
+			<li><a href="/apps/exlottery/exlotteries/">幸运码抽奖</a></li>
 			<li class="active">查看结果</li>
 		</ul>
 	</div>
