--- a/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
@@ -71,8 +71,8 @@
         <ul class="breadcrumb">
       <li>您当前所在位置</li>
       <li><a href="/termite2/pages/">百宝箱</a></li>
-      <li><a href="/apps/exlottery/exlotteries/">专项抽奖</a></li>
-      <li class="active">新建专项抽奖</li>
+      <li><a href="/apps/exlottery/exlotteries/">幸运码抽奖</a></li>
+      <li class="active">新建幸运码抽奖</li>
         </ul>
     </div>
 {% if is_deleted_data %}
