--- a/weapp/mall/templates/mall/editor/sender_info.html
+++ b/weapp/mall/templates/mall/editor/sender_info.html
@@ -110,7 +110,7 @@
           args:args,
 	      success: function(data) {
 	      	
-				window.location.href = '/mall2/sender_info_list/';
+				window.location.reload();
 					},
 					error: function(resp) {
 						
