--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
@@ -57,7 +57,7 @@
     {% endif %}
 	<div class="xui-container p30">
     	<form class="xui-form" method="post" action="" id="editForm">
-			<div class="xui-pageTitle tc xui-ffht c3">微众卡</div>
+			<div class="xui-pageTitle tc xui-ffht c3">1微众卡</div>
 			<div class="xui-pageTip tc xui-ffht">微众卡余额查询</div>
 		
 			<div class="xui-submitBox">
