--- a/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
@@ -191,9 +191,15 @@
           </label>
           <label class="limit_product"></label>
         {% endif %}
+
       </div>
+
       <div class="errorHint" data-error-hint="请选择一个商品" style="margin-left: 415px;
 margin-top: -29px;"></div>
+    </div>
+    <div class="form-group h40">
+       <label class="control-label col-sm-2 col-sm-offset-1 pt0 w110">领取权限：</label>
+       <input type="checkbox" name='' value="" ><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">仅未下单用户可领取</b>
     </div>
     <div class="panel-body mb0 xui-promotion-createFlashSalePage xa-product">
       {% if coupon_rule and promotion.products %}
