--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -3,7 +3,7 @@
 
 {% ifequal component.type 'appkit.exlotterydescription' %}
     <div class="wui-surveyDescription wui-lotterydescription xa-exlotterydescription" {% if component.model.exlottery_bg_image %}style="background-image: url({{ component.model.exlottery_bg_image }})"{% endif %}>
-        <div class="wui-i-roulette wui-i-title">
+        <div class="wui-i-roulette wui-i-title wui-i-nobg">
             <h1 class="wui-i-innerTitle"></h1>
         </div>
         <div class="wui-i-roulette wui-i-header xa-header {% if component.model.limitation == 'no_limit' %}wui-lotterydescription-hide{% endif %}">
