--- a/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
@@ -14,7 +14,6 @@
         .wui-SignPageDiv {
 			background-image:  url('/termite_static/img/component/exsign/exsigndescription_rules_bg.png');
             width: 100%;
-            min-height: 560px;
         }
 
         .wui-TopPaneDiv {
@@ -336,46 +335,46 @@
 			<span class="wa-daily_title">今日可以领取</span><span class="daily_points wa-daily_points Num">{%if component.model.daily_points %}{{component.model.daily_points}}{%else%}0{%endif%}积分，</span><span class="daily_prizes wa-daily_prizes" {%if not component.model.daily_prizes %}style="display: none"{%endif%}><b class="wui-coupon-count" >{{component.model.daily_prizes | length}}张</b>优惠券</span>
 		</div>
 	</div>
-    <li class="wui-SignDescriptionDiv">
+    <div class="wui-SignDescriptionDiv">
 		<div class="wui-SignDescriptionDivRules">
 			<img src="/termite_static/img/component/exsign/exsigndescription_rules_top.png" />
 		</div>
-        <ul class="Chr wui-ExSignRules wa-exsign-rules">
-			<li class="wui-description" {% if not component.model.description %}style="display: none"{% endif %}>{{component.model.description}}</li>
-			<li class="wui-rules"><div>签到次数和对应奖品关系如下：</div>
-				<div class="wui-rules-daily">
-					<div class="fl">每日签到：</div>
-					<div class="fl">
-						<ul>
-							<li class="wui-rules-daily-point">获得{%if component.model.daily_points %}{{component.model.daily_points}}{%else%}0{%endif%}积分</li>
-							<li class="wui-rules-daily-prizes" {% if not component.model.daily_prizes %}style="display: none"{% endif %}>
-								{% for daily_prize in  component.model.daily_prizes %}
-								<div>获得{{daily_prize.name}}</div>
-							{% endfor %}
-							</li>
-						</ul>
-					</div>
-					<div class="wui-clearf"></div>
-				</div>
-				{% for component in  component.components %}
-					<div class="wui-rules-serial wui-rules-serial{{ component.cid }}">
-					<div class="wui-rules-days fl">连续签到{{ component.model.serial_count }}天：</div>
-					<div class="wui-rules-rule fl">
-						<ul>
-							<li class="wui-rules-serial-point" {% if not component.model.serial_count_points %}style="display: none"{% endif %}>获得{%if component.model.serial_count_points %}{{component.model.serial_count_points}}{%else%}0{%endif%}积分</li>
-							<li class="wui-rules-serial-prizes">
-								{% for serial_count_prize in  component.model.serial_count_prizes %}
-									<div>获得{{serial_count_prize.name}}</div>
+		<ul class="Chr wui-ExSignRules wa-exsign-rules">
+				<li class="wui-description" {% if not component.model.description %}style="display: none"{% endif %}>{{component.model.description}}</li>
+				<li class="wui-rules"><div>签到次数和对应奖品关系如下：</div>
+					<div class="wui-rules-daily">
+						<div class="fl">每日签到：</div>
+						<div class="fl">
+							<ul>
+								<li class="wui-rules-daily-point">获得{%if component.model.daily_points %}{{component.model.daily_points}}{%else%}0{%endif%}积分</li>
+								<li class="wui-rules-daily-prizes" {% if not component.model.daily_prizes %}style="display: none"{% endif %}>
+									{% for daily_prize in  component.model.daily_prizes %}
+									<div>获得{{daily_prize.name}}</div>
 								{% endfor %}
-							</li>
-						</ul>
+								</li>
+							</ul>
+						</div>
+						<div class="wui-clearf"></div>
 					</div>
-					<div class="wui-clearf"></div>
-				</div>
-				{% endfor %}
-			</li>
-			<li>签到奖励可以到<b class="wui-rules-member-center">个人中心</b>查看</li>
-		</ul>
-    </div>
+					{% for component in  component.components %}
+						<div class="wui-rules-serial wui-rules-serial{{ component.cid }}">
+						<div class="wui-rules-days fl">连续签到{{ component.model.serial_count }}天：</div>
+						<div class="wui-rules-rule fl">
+							<ul>
+								<li class="wui-rules-serial-point" {% if not component.model.serial_count_points %}style="display: none"{% endif %}>获得{%if component.model.serial_count_points %}{{component.model.serial_count_points}}{%else%}0{%endif%}积分</li>
+								<li class="wui-rules-serial-prizes">
+									{% for serial_count_prize in  component.model.serial_count_prizes %}
+										<div>获得{{serial_count_prize.name}}</div>
+									{% endfor %}
+								</li>
+							</ul>
+						</div>
+						<div class="wui-clearf"></div>
+					</div>
+					{% endfor %}
+				</li>
+				<li>签到奖励可以到<b class="wui-rules-member-center">个人中心</b>查看</li>
+			</ul>
+	</div>
 </div>
 {% endifequal %}
