修改团购成功的提示语

--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -644,7 +644,7 @@
         if(is_group_leader || is_helped){
             mask('show');
             $('.xui-groupMsg-Hint').removeClass('none');
-            $('.xa-groupMsg-Hint').find('.xa-i-msg').html('商家将在该商品团购结束20天内进行发货');
+            $('.xa-groupMsg-Hint').find('.xa-i-msg').html('商家会尽快发货');
             $('.xa-groupMsg-Hint').find('.xa-i-msg-title').html('恭喜您 ');
             $('.xa-groupMsg-Hint').find('.xa-i-msg-title-status').html('团购成功');
             $('.wa-i-btn-groupMsg-yes').click(function(){
